Making of Sidebar

--- a/clone/src/body.css
+++ b/clone/src/body.css
@@ -1,4 +1,9 @@
 .body{
+    padding: 30px;
     border: 5px solid red;
     flex: 0.8;
+    /* background-color:   rgb(91,87,115); */
+    height: 100vh;
+    color: white;
+    background: linear-gradient(rgb(91,87,115),rgba(0,0,0,1));
 }
