--- a/clone/src/sidebar.css
+++ b/clone/src/sidebar.css
@@ -1,5 +1,31 @@
 .sidebar{
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 100vh;
     flex: 0.2;
+    color: white;
+     min-width: 230px;
+     padding-left: 10px;
+     padding-right: 10px;
+    background-color: #040404;
+}
+
+.sidebar-logo{
+    padding: 10px;
+    margin-right: auto;
+    height: 70px;
+    /* width: 100px; */
+    /* object-fit: contain;  */
+    /* it keep the aspect ratio */
+}
+
+.sidebar >hr{
+    border: 1px solid #282828;
+    width: 90%;
+    margin: 10px auto;
+}
+ 
+.sidebar-title{
+    padding: 10px;
+    font-size: 15px;
+    margin-left: 10px;
 }
