--- a/clone/src/body.css
+++ b/clone/src/body.css
@@ -5,5 +5,57 @@
     /* background-color:   rgb(91,87,115); */
     height: 100vh;
     color: white;
+    overflow-y: overlay;
     background: linear-gradient(rgb(91,87,115),rgba(0,0,0,1));
+}
+.body::-webkit-scrollbar{
+    display: none;
+}
+
+.body-info{
+    display: flex;
+    align-items: flex-end;
+    padding: 10px;
+}
+
+.body-info > img {
+    height: 20vw;
+    margin: 0 20px;
+    box-shadow: 0 4px 60px rgba(0, 0, 0, 0.9);
+    border-radius: 3px;
+}
+
+.body-infoText{
+    flex: 1;
+}
+.body-infoText > h2{
+   font-size: 48px;
+   /* margin-bottom: 10px; */
+}
+.body-infoText >p{
+    font-size: 14px;
+}
+
+.body-icons{
+    display: flex;
+    align-items: center;
+    /* margin-right: 20px;  this is not works becuase these icons are material ui icons so they use there own property*/
+    /* which is write below */
+    /* justify-content: space-around; */
+
+}
+.body-icons> .MuiSvgIcon-root{
+    margin-right: 20px;
+}
+
+.body-shuffle{
+    font-size: 80px !important;
+    margin-left: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.body-shuffle:hover{
+    transition: transform 150ms ease-in;
+    transform: scale(1.08);
 }
